--- a/Klo.Tray/App.config
+++ b/Klo.Tray/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="host" value="https://bitbucket.cid-dev.net/repos?visibility=public"/>
+    <add key="host" value="http://10.108.4.171:8080/api/respones.json"/>
   </appSettings>  
   <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
